# assignment4-data

./: .gitignore  main.py
cs336-basics/: pyproject.toml  requirements.txt
cs336-basics/scripts/: tokenize_data.py
cs336-data/: download.sh  pyproject.toml  requirements-full.txt
cs336-data/cs336_data/: dedup_data.py  detect_harmful_info.py  detect_low_quality_crawl.py  exact_line_deduplication.py  extract_from_html.py  fliter_mul_process.py  fuzzy_deduplication.py  identify_language.py  remove_personal_info.py  train_low_quality_classifier.py
cs336-data/tests/: adapters.py  test_quality.py
